# loans_api

./: .env.db  .env.dev  .env.prod  .gitignore  .setup.cfg  Dockerfile  Dockerfile.prod  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  setup.cfg
app/: manage.py
app/loan_simulation/: apps.py  enums.py  helpers.py  models.py  serializers.py  urls.py  views.py
app/loan_simulation/helpers/: calculate_simulations.py  converters.py  record_simulations.py
app/loan_simulation/migrations/: 0001_initial.py
app/loan_simulation/models/: __init__.py  dataclasses.py  loan_simulation.py
app/loan_simulation/tests/: conftest.py  test_helpers.py  test_serializers.py  test_views.py
app/loan_simulation/tests/helpers/: test_calculate_simulations.py  test_record_simulations.py
app/loans_api/: asgi.py  settings.py  urls.py  wsgi.py
app/loans_api/settings/: base.py  dev.py  prod.py
nginx/: Dockerfile  nginx.conf
